--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
-    "python.pythonPath": "C:\\Users\\nickr\\anaconda3\\python.exe",
+    "python.pythonPath": "C:\\Users\\nickr\\ANACON~1\\envs\\r-reticulate\\python.exe",
     "files.autoGuessEncoding": true
 }
