--- a/Bert_regressor model/.gitattributes
+++ b/Bert_regressor model/.gitattributes
@@ -1,2 +1,5 @@
 *.pth filter=lfs diff=lfs merge=lfs -text
 *.safetensors filter=lfs diff=lfs merge=lfs -text
+Bert_regressor[[:space:]]model/bert_regressor.pth filter=lfs diff=lfs merge=lfs -text
+Bert_regressor[[:space:]]model/local_bert_base_uncased_model/model.safetensors filter=lfs diff=lfs merge=lfs -text
+Bert_regressor[[:space:]]model/my_model_directory/model.safetensors filter=lfs diff=lfs merge=lfs -text
